# bw-inf23

./: .gitignore  .nojekyll  CNAME  _quarto.yml  index.html  index.qmd  robots.txt  search.json  sitemap.xml
_freeze/aufgabe_1/index/execute-results/: html.json
_freeze/runde_1/aufgabe_1/index/execute-results/: html.json
_freeze/runde_1/aufgabe_2/index/execute-results/: html.json
_freeze/runde_1/aufgabe_3/index/execute-results/: html.json
_site/: index.html  search.json  styles.css
_site/aufgabe_1/: index.html
aufgabe_1/: index.html  index.qmd  index.quarto_ipynb
runde_1/: index.html  index.qmd
runde_1/aufgabe_1/: index.html  index.qmd  index.quarto_ipynb
runde_1/aufgabe_2/: index.html  index.qmd  index.quarto_ipynb
runde_1/aufgabe_2/proj/: README.md  index.ts  package.json
runde_1/aufgabe_3/: index.html  index.qmd  index.quarto_ipynb
runde_1/aufgabe_3/files/: sudoku3.txt
runde_1/aufgabe_3/solution-rust/: Cargo.toml  README.md  run_benchmarks.sh
runde_1/aufgabe_3/solution-rust/benches/: README.md  unified_benchmark.rs
runde_1/aufgabe_3/solution-rust/files/: sudoku0.txt  sudoku1.txt  sudoku2.txt  sudoku3.txt  sudoku4.txt
runde_1/aufgabe_3/solution-rust/src/: lib.rs  main.rs  operation.rs  parser.rs  possible_swaps.rs  structs.rs  utils.rs
runde_1/aufgabe_3/solution-rust/tests/: all_sudokus.rs
runde_1/aufgabe_4/: index.qmd
site_libs/bootstrap/: bootstrap-2de20cb76464c514fcd56ce40d6195d3.min.css
