[package]
name = "bw-inf23-1-3"
version = "0.1.0"
edition = "2024"

[lib]
name = "bw_inf23_1_3"
path = "src/lib.rs"

[[bin]]
name = "bw-inf23-1-3"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.98", features = ["backtrace"] }
array2d = "0.3.2"
itertools = "0.14.0"

[dev-dependencies]
criterion = "0.6"

[[bench]]
name = "unified_benchmark"
harness = false
